started saved listing page

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -100,70 +100,13 @@
                       </div>
                     </div>
                   </div>
-                  <div class="fields">
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="instagram">Instagram</label>
-                      <div id="instagram-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input id="instagram-input" name="instagram" type="text" >
-                        <i class="instagram icon"></i>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="facebook">Facebook</label>
-                      <div id="facebook-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input name="facebook" id="facebook-input"  type="text" >
-                        <i class="facebook icon"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="fields">
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="twitter">Twitter</label>
-                      <div id="twitter-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input id="twitter-input" name="twitter" type="text" >
-                        <i class="twitter icon"></i>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="linkedin">Linkedin</label>
-                      <div id="linkedin-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input id="linkedin-input" name="linkedin" type="text">
-                        <i class="linkedin icon"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="fields">
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="youtube">Youtube</label>
-                      <div id="youtube-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input id="youtube-input"  name="youtube" type="text" >
-                        <i class="youtube icon"></i>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <label style="margin-top: 2rem;" id="website">Website</label>
-                      <div id="website-div" style="margin-top: 1rem;" class="ui transparent left icon input">
-                        <input id="website-input"  name="website" type="text" >
-                        <i class="edit icon"></i>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="field">
-                    <label style="margin-top: 2rem;" id="about">About</label>
-                    <div id="about-div" style="margin-top: 1rem;" class="ui left icon input">
-                      <textarea id="about-input" name="about" type="text" ></textarea>
-                      <i class="edit icon"></i>
-                    </div>
-                  </div>
                   <button class="ui button" id="update-profile" >Update</button>
                 </form>
               </div>
             </div>
           </div>
         </div>
-        <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div">
-
-        </div>
+        <div data-tab="listings" id="listings-div" class="ui right attached tab item tab-div"></div>
         <div data-tab="billing" class="ui right attached tab item tab-div">
           <p>billing</p>
         </div>
