--- a/public/register.html
+++ b/public/register.html
@@ -34,26 +34,45 @@
 </head>
 <body>
     <div id="form-container">
-        <div id="form" class="ui equal width form">
+        <form id="register-form" class="ui equal width form">
             <!-- header  -->
             <div class="fields">
               <div class="field">
                 <h1 id="register-form-header">Register</h1>
               </div>
             </div>
-            <!-- first row  -->
-            <div class="fields">
-              <div class="field">
-                <label id="list-form-text">Email</label>
-                <input id="email" type="email" placeholder="Full Name" />
-              </div>
-              <div class="field">
-                <label id="list-form-text">Password</label>
-                <input id="password" type="password" placeholder="Full Name" />
-              </div>
+          <div class="fields">
+            <div class="field">
+              <label id="list-form-text">First Name</label>
+              <input id="first_name" name="first_name" type="text" placeholder="Full Name" />
+            </div>
+            <div class="field">
+              <label id="list-form-text">Last Name</label>
+              <input id="last_name" name="last_name" type="text" placeholder="Full Name" />
+            </div>
+        </div>
+        <div class="fields">
+          <div class="field">
+            <label id="list-form-text">Email</label>
+            <input id="email" name="email" type="email" placeholder="Full Name" />
           </div>
-          <button class="ui button" id="submit" >Submit</button>
-    </div>
+          <div class="field">
+            <label id="list-form-text">Phone</label>
+            <input id="phone" name="phone" type="text" placeholder="Full Name" />
+          </div>
+      </div>
+      <div class="fields">
+        <div class="field">
+          <label id="list-form-text">Password</label>
+          <input id="password" name="password" type="password" placeholder="Full Name" />
+        </div>
+        <div class="field">
+          <label id="list-form-text">Confirm Password</label>
+          <input id="confirm_pswd" name="confirm_pswd" type="password" placeholder="Full Name" />
+        </div>
+      </div>
+          <button class="ui button" id="register-submit" >Submit</button>
+        </form>
 
 
     <script src='./js/register.js' ></script>
