got map + geolocation, implementing listing location

--- a/public/edit.listing.html
+++ b/public/edit.listing.html
@@ -45,6 +45,43 @@
                 <input id="business_description" name="business_description" type="text" class="ui input">
             </div>
         </div>
+        <div class="field">
+            <label id="category">Category</label>
+            <div id="category-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                <div class="ui fluid selection dropdown">
+                    <input id="category" type="hidden" name="category">
+                    <i class="dropdown icon"></i>
+                    <div id="select-default" class="default text">--</div>
+                    <div class="menu">
+                      <div class="item" data-value="dermatologist">
+                        Dermatologist
+                      </div>
+                      <div class="item" data-value="care">
+                        Hair Care Salons
+                      </div>
+                      <div class="item" data-value="loss">
+                        Hair Loss / Hair Care Products & Treatments
+                      </div>
+                      <div class="item" data-value="replacement">
+                        Hair Replacement & Hair Systems
+                      </div>
+                      <div class="item" data-value="laser">
+                        Laser Therapy
+                      </div>
+                      <div class="item" data-value="medical">
+                        Medial / Hair Transplants
+                      </div>
+                      <div class="item" data-value="tricho">
+                        Trichologist
+                      </div>
+                      <div class="item" data-value="wigs">
+                        Wigs, Extensions, Hair Additions
+                      </div>
+                    </div>
+                  </div>
+            </div style="margin-top: 2rem;">
+        </div>
+        </div>
         <div class="fields">
             <div class="field">
                 <label id="street_address">Street Address</label>
