--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -48,7 +48,44 @@
                     <i class="edit icon"></i>
                 </div style="margin-top: 2rem;">
             </div>
+        <div class="field">
+            <label style="margin-top: 2rem;" id="labels-1">Select a category</label>
+                <div id="category-div" style="margin-top: 1rem;" class="ui transparent left icon input">
+                    <div class="ui fluid selection dropdown">
+                        <input type="hidden" name="category">
+                        <i class="dropdown icon"></i>
+                        <div class="default text">--</div>
+                        <div class="menu">
+                          <div class="item" data-value="dermatologist">
+                            Dermatologist
+                          </div>
+                          <div class="item" data-value="care">
+                            Hair Care Salons
+                          </div>
+                          <div class="item" data-value="loss">
+                            Hair Loss / Hair Care Products & Treatments
+                          </div>
+                          <div class="item" data-value="replacement">
+                            Hair Replacement & Hair Systems
+                          </div>
+                          <div class="item" data-value="laser">
+                            Laser Therapy
+                          </div>
+                          <div class="item" data-value="medical">
+                            Medial / Hair Transplants
+                          </div>
+                          <div class="item" data-value="tricho">
+                            Trichologist
+                          </div>
+                          <div class="item" data-value="wigs">
+                            Wigs, Extensions, Hair Additions
+                          </div>
+                        </div>
+                      </div>
+                </div style="margin-top: 2rem;">
+            </div>
             <div id="submit1" class="submit-button">Next <i class="right arrow icon"></i></div>
+        </div>
         </form>
         <form id="form-2" class="ui equal width form">
             <h1 class="form-h1">International Authority Directory</h1>
