added category to form, db, edit and started geolocation on map

--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -56,28 +56,28 @@
                         <i class="dropdown icon"></i>
                         <div class="default text">--</div>
                         <div class="menu">
-                          <div class="item" data-value="dermatologist">
+                          <div class="item" data-value="Dermatologist">
                             Dermatologist
                           </div>
-                          <div class="item" data-value="care">
+                          <div class="item" data-value="Hair Care Salons">
                             Hair Care Salons
                           </div>
-                          <div class="item" data-value="loss">
+                          <div class="item" data-value="Hair Loss / Hair Care Products & Treatments">
                             Hair Loss / Hair Care Products & Treatments
                           </div>
-                          <div class="item" data-value="replacement">
+                          <div class="item" data-value="Hair Replacement & Hair Systems">
                             Hair Replacement & Hair Systems
                           </div>
-                          <div class="item" data-value="laser">
+                          <div class="item" data-value="Laser Therapy">
                             Laser Therapy
                           </div>
-                          <div class="item" data-value="medical">
+                          <div class="item" data-value="Medial / Hair Transplants">
                             Medial / Hair Transplants
                           </div>
-                          <div class="item" data-value="tricho">
+                          <div class="item" data-value="Trichologist">
                             Trichologist
                           </div>
-                          <div class="item" data-value="wigs">
+                          <div class="item" data-value="Wigs, Extensions, Hair Additions">
                             Wigs, Extensions, Hair Additions
                           </div>
                         </div>
