--- a/public/edit.listing.html
+++ b/public/edit.listing.html
@@ -53,30 +53,30 @@
                     <i class="dropdown icon"></i>
                     <div id="select-default" class="default text">--</div>
                     <div class="menu">
-                      <div class="item" data-value="dermatologist">
-                        Dermatologist
-                      </div>
-                      <div class="item" data-value="care">
-                        Hair Care Salons
-                      </div>
-                      <div class="item" data-value="loss">
-                        Hair Loss / Hair Care Products & Treatments
-                      </div>
-                      <div class="item" data-value="replacement">
-                        Hair Replacement & Hair Systems
-                      </div>
-                      <div class="item" data-value="laser">
-                        Laser Therapy
-                      </div>
-                      <div class="item" data-value="medical">
-                        Medial / Hair Transplants
-                      </div>
-                      <div class="item" data-value="tricho">
-                        Trichologist
-                      </div>
-                      <div class="item" data-value="wigs">
-                        Wigs, Extensions, Hair Additions
-                      </div>
+                        <div class="item" data-value="Dermatologist">
+                            Dermatologist
+                          </div>
+                          <div class="item" data-value="Hair Care Salons">
+                            Hair Care Salons
+                          </div>
+                          <div class="item" data-value="Hair Loss / Hair Care Products & Treatments">
+                            Hair Loss / Hair Care Products & Treatments
+                          </div>
+                          <div class="item" data-value="Hair Replacement & Hair Systems">
+                            Hair Replacement & Hair Systems
+                          </div>
+                          <div class="item" data-value="Laser Therapy">
+                            Laser Therapy
+                          </div>
+                          <div class="item" data-value="Medial / Hair Transplants">
+                            Medial / Hair Transplants
+                          </div>
+                          <div class="item" data-value="Trichologist">
+                            Trichologist
+                          </div>
+                          <div class="item" data-value="Wigs, Extensions, Hair Additions">
+                            Wigs, Extensions, Hair Additions
+                          </div>
                     </div>
                   </div>
             </div style="margin-top: 2rem;">
