search functionality implementing location + results in area

--- a/public/index.html
+++ b/public/index.html
@@ -109,12 +109,14 @@
               <p id="search-title">Find Top Hair Loss Professionals</p>
               <p id="search-subtitle">From the only 100% objective directory</p>
               <div class="ui search"  >
-                <div class="ui icon input">
+                <div class="ui icon input search">
                   <input id="search-semantic" class="prompt" type="text" placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy">
-                  <i class="search icon"></i>
+                  <i id="search-icon" class="search icon"></i>
+                  <div style="margin-left: 8rem;" class="results"></div>
                 </div>
-                <div class="results"></div>
+                <button class="ui button" id="search-button" >Search</button>
               </div>
+
             </div>
             <div class="six wide computer only center aligned column">
               <div class="ui grid container" id="landing-card">
