--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -30,57 +30,7 @@
   <div id="page-container">
     <div style="width: 100%; margin: 0px;" class="ui grid">
       <div class="row">
-        <div id="listings-column" class="eight wide column">
-          <div style="margin-bottom: 1rem;" class="listingItem ui grid">
-            <div class="row">
-              <div class="six wide middle aligned column">
-                <p class="listingTitle">
-                  Test
-                </p>
-                <p class="listingSubtitle">We test</p>
-              </div>
-              <div class="six wide column"></div>
-              <div class="four wide column">
-                <a id="${listing.id}" class="editButton">
-                  <div style="color: white;" class="listing-buttons " id="${listing.id}">
-                    <i style="pointer-events:none" class="edit icon"></i> Edit
-                  </div>
-                </a>
-                <a id="${listing.id}" class="editButton">
-                  <div style="color: white;" class="listing-buttons ">
-                    <i style="pointer-events:none" style="color: red;" class="delete icon"></i>
-                    Delete
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div style="margin-bottom: 1rem;" class="listingItem ui grid">
-            <div class="row">
-              <div class="six wide middle aligned column">
-                <p class="listingTitle">
-                  Test
-                </p>
-                <p class="listingSubtitle">We test</p>
-              </div>
-              <div class="six wide column"></div>
-              <div class="four wide column">
-                <a id="${listing.id}" class="editButton">
-                  <div style="color: white;" class="listing-buttons " id="${listing.id}">
-                    <i style="pointer-events:none" class="edit icon"></i> Edit
-                  </div>
-                </a>
-                <a id="${listing.id}" class="editButton">
-                  <div style="color: white;" class="listing-buttons ">
-                    <i style="pointer-events:none" style="color: red;" class="delete icon"></i>
-                    Delete
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <div id="listings-column" class="eight wide column"></div>
         <div style="margin-top: 1rem;" class="seven wide column">
           <div id="preview-container">
             <div style="margin: 0px;" class="ui grid container">
