--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <script>
+  <!-- <script>
     function getGeolocation() {
       navigator.geolocation.getCurrentPosition(drawMap);
     }
@@ -72,12 +72,13 @@
              <br>Longitude: ${geoPos.coords.longitude}`
       });
     }
-    getGeolocation();
-  </script>
+    // getGeolocation();
+  </script> -->
   <!-- left call back empty in uri  -->
+  
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzwFcR1tSuszjACQkI67oXrQevIpBIuFo&callback="
     async defer></script>
-  <script src="./js/search.listings.js" type="text/javascript"></script>
+    <script src="./js/search.listings.js" type="text/javascript"></script>
 
 
 </body>
