--- a/public/search.listings.html
+++ b/public/search.listings.html
@@ -39,16 +39,15 @@
         <div id="listings-column" class="eight wide column"></div>
         <div style="margin-top: 1rem;" class="seven wide column">
           <div id="preview-container">
-            <div style="margin: 0px;" class="ui grid container">
-              <div class="five wide column">
-                <img src="https://via.placeholder.com/100" alt="placeholder" />
-              </div>
-              <div class="ten wide column">
-                <h1>Name</h1>
-                <h3>Subtitle</h3>
-                <!-- <button class="ui button"  >View</button> -->
-              </div>
-            </div>
+              <div  class="ui search"  >
+                <h1>Search Listings</h1>
+                  <div id="search" class="ui icon input search">
+                    <input style="width: 100%;" id="search-semantic" class="prompt" type="text" placeholder="Ex. Hair Restoration, Hair Transplant, Laser Therapy">
+                    <i id="search-icon" class="search icon"></i>
+                    <div style="margin-left: 8rem;" class="results"></div>
+                  </div>
+                  <button style="margin-top: 1rem;" class="ui button" id="search-button" >Search</button>
+                </div>
           </div>
           <div style="margin-top: .5rem; position: relative;" id="map-container">
             <div id="map"></div>
