--- a/public/edit.listing.html
+++ b/public/edit.listing.html
@@ -25,10 +25,7 @@
 <body>
     <div id="navbar" class="ui top attached menu">
         <div class="four wide center aligned column ">
-            <button id="back-button" class="ui button">Back</button>
-        </div>
-        <div class="right menu">
-            <div id="logout-button" class="submit-button">Logout</i></div>
+            <div id="back-button" class="submit-button"><i class="left arrow icon" ></i>Back</div>
         </div>
     </div>
 
