--- a/public/listing.form.html
+++ b/public/listing.form.html
@@ -27,7 +27,7 @@
 <body>
     <div class="nav-bar">
         <p class="nav-h1" style="font-size: 20px; margin: 0px;">The International Hair Authority Directory</p>
-        <div id="home-button"><i class="left arrow icon"></i>Back</div>
+        <div id="back-button"><i class="left arrow icon"></i>Back</div>
     </div>
     <div id="form-page-container">
         <form id="form-1" class="ui equal width form">
