--- a/public/saved.listings.html
+++ b/public/saved.listings.html
@@ -37,10 +37,8 @@
   <div class="ui grid" id="page-container">
       <div class="row">
         <div class="three wide column"></div>
-        <div  class="ten wide column">
-            <div id="listing-container">
-
-            </div>
+        <div id="listing-container" class="ten wide column">
+            
         </div>
         <div class="three wide column"></div>
       </div>
