--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -52,8 +52,9 @@
                 <input id="password" type="password" placeholder="Full Name" />
               </div>
           </div>
-          <button class="ui button" id="submit" >Submit</button>
+          <p id="noAccount" >Don't have an account? <a href="register.html" >Sign up</a></p>
     </div>
+    
 
     <script src="./js/css.js" ></script>
     <script src='./js/sign-in.js' ></script>
