--- a/public/edit.listing.html
+++ b/public/edit.listing.html
@@ -39,7 +39,7 @@
         <div class="fields">
             <div class="field">
                 <label id="business_description">Business Description</label>
-                <input id="business_description" name="business_description" type="text" class="ui input">
+                <textarea id="business_description" name="business_description" type="text" class="ui input"></textarea>
             </div>
         </div>
         <div class="field">
